--- a/codigo/public/index.html
+++ b/codigo/public/index.html
@@ -39,7 +39,7 @@
                 <div class="line3"></div>
             </div>
             <ul class="nav-list" id="cadastro-login">
-                <li><a id="perfilnavbar" href="#" onclick=perfil() style="color: #fff; text-decoration:none">Perfil</a>
+                <li><a id="perfilnavbar" href="#" onclick=perfilindex() style="color: #fff; text-decoration:none">Perfil</a>
                 </li>
                 <li><a href="#" onclick=torneioprivado() style="color: #fff; text-decoration:none">Marcar
                         Torneio Privado</a></li>
